[gd_scene load_steps=15 format=2]

[ext_resource path="res://Green/Script/Sentinel.gd" type="Script" id=1]
[ext_resource path="res://Green/source/Audio/sentinelsfx.wav" type="AudioStream" id=2]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.0901961, 0.2, 0.0196078, 1 )
metallic = 1.0
roughness = 0.7
emission_enabled = true
emission = Color( 0.027451, 0.239216, 0.00784314, 1 )
emission_energy = 1.0
emission_operator = 1
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CylinderShape" id=5]
radius = 12.1508
height = 32.4074

[sub_resource type="SphereShape" id=6]
radius = 100.0

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("SpotLight2:spot_angle")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.1, 25.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpotLight:spot_angle")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 25.0, 0.1 ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("SpotLight2:spot_angle")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 25.0, 0.1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpotLight:spot_angle")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.1, 25.0 ]
}

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
spread = 0.0
gravity = Vector3( 0, 2, 0 )
linear_accel = -1.26
linear_accel_random = 1.0
radial_accel = -1.15
tangential_accel = 3.0
tangential_accel_random = 1.0
angle = 90.0
angle_random = 1.0
scale = 0.68
color = Color( 0.00784314, 0.231373, 0.0156863, 1 )

[sub_resource type="SpatialMaterial" id=10]
flags_unshaded = true
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
params_blend_mode = 1
params_billboard_mode = 3
params_billboard_keep_scale = true
params_grow = true
params_grow_amount = 0.0
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id=11]
material = SubResource( 10 )

[sub_resource type="SphereShape" id=12]
radius = 2.0

[node name="Sentinel" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 27, 0 )
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="meshes" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.352264, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="meshes"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, -1.22021, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="SpotLight" type="SpotLight" parent="meshes"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, -0.156, -1.111, -0.238 )
light_color = Color( 0.196078, 0.803922, 0, 1 )
light_energy = 16.0
spot_range = 47.1921
spot_attenuation = 0.258816
spot_angle = 25.0

[node name="SpotLight2" type="SpotLight" parent="meshes"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, -0.156131, -1.11112, -0.238455 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 16.0
spot_range = 47.1921
spot_attenuation = 0.258816
spot_angle = 0.1

[node name="OmniLight" type="OmniLight" parent="meshes"]
transform = Transform( 0.987679, -0.156484, 0.00176657, 0.153895, 0.973262, 0.170522, -0.0284033, -0.168149, 0.985352, -0.0207173, -1.99979, -0.0207184 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 12.01
omni_range = 1.0

[node name="Area" type="Area" parent="meshes"]
transform = Transform( 1, -2.79397e-09, 0, -2.79397e-09, 1, -2.98023e-08, 0, 0, 1, -0.418472, -15.7339, -0.589406 )

[node name="CollisionShape" type="CollisionShape" parent="meshes/Area"]
transform = Transform( 1, -2.22038e-16, 1.73472e-18, 6.77626e-21, 1, 2.22045e-16, 0, 2.22045e-16, 1, 0, 0, 0 )
shape = SubResource( 5 )

[node name="Area2" type="Area" parent="meshes"]

[node name="CollisionShape" type="CollisionShape" parent="meshes/Area2"]
shape = SubResource( 6 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="meshes"]
anims/detecting = SubResource( 7 )
anims/q_detecting = SubResource( 8 )

[node name="particles" type="Spatial" parent="."]

[node name="Particles" type="Particles" parent="particles"]
amount = 50
lifetime = 1.48
explosiveness = 0.18
randomness = 1.0
process_material = SubResource( 9 )
draw_pass_1 = SubResource( 11 )

[node name="audio" type="Spatial" parent="."]

[node name="audio" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 2 )
volume_db = -80.0
autoplay = true

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 12 )
[connection signal="body_entered" from="meshes/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="meshes/Area" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="meshes/Area2" to="." method="_on_Area2_body_entered"]
[connection signal="body_exited" from="meshes/Area2" to="." method="_on_Area2_body_exited"]
